--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:+'
 
     testCompile 'org.junit.jupiter:junit-jupiter-api:+',
-            'org.hamcrest:java-hamcrest:+'
+            'org.hamcrest:java-hamcrest:+',
+            'org.springframework:spring-test:+'
 }
 
 task Wrapper(type: Wrapper) {
